# ThisFunc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  TypeDeduction.org  doxygen
ThisFunc/: CMakeLists.txt
bench/: CMakeLists.txt  HashArray.cpp  VM.cpp
benchmarks/: add.tf  divbyzero.tf  fact.tf  funcall.tf
exec/: main.cpp
exec/tooling/: tfl.cpp
include/Kal/: HashArray.hpp  defs.hpp
include/ThisFunc/: AST.hpp  AmbiguousTypeException.hpp  Chunk.hpp  CodeLocation.hpp  Compiler.hpp  ConflictingNameException.hpp  Constant.hpp  Disassembler.hpp  DynArray.hpp  ExtendedAST.hpp  Interpreter.hpp  Parser.hpp  Resolver.hpp  Scanner.hpp  ScannerException.hpp  Token.hpp  TypeDeduction.hpp  UndeclaredFunctionException.hpp  VM.hpp  defs.hpp
src/: CMakeLists.txt  Compiler.cpp  Interpreter.cpp  Parser.cpp  Resolver.cpp  Scanner.cpp  Token.cpp
src/AST/: AST.cpp  Add.cpp  Body.cpp  Cos.cpp  Div.cpp  Eq.cpp  ExtendedAST.cpp  Filter.cpp  Funcall.cpp  Fundef.cpp  Head.cpp  Identifier.cpp  If.cpp  Le.cpp  List.cpp  Map.cpp  Mul.cpp  Nand.cpp  Number.cpp  Param.cpp  ParamFuncall.cpp  Pow.cpp  Sin.cpp  Sqrt.cpp  Sub.cpp  Tail.cpp  TypeDeduction.cpp
src/VM/: Chunk.cpp  Disassembler.cpp  VM.cpp
test/: AST.cpp  CMakeLists.txt  HashArray.cpp  ParseExamples.cpp  Parser.cpp  Resolver.cpp  Scanner.cpp  TypeDeduction.cpp
